fix icon misalignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,3 +12,8 @@ a {
   padding: 0;
   margin: 0;
 }
+
+/* Fix icon misalignment */
+.anticon svg {
+  display: block !important;
+}
